digitransit-component/packages/digitransit-component-favourite-editing-modal/src/helpers/styles.scss
@import '~@hsl-fi/sass/colors';
@import '~@hsl-fi/sass/mixins/screen';
@import '~@hsl-fi/sass/mixins/text';

$primary-color: #007ac9;

.favourite-edit-list-container {
  display: flex;
  position: relative;
  width: 100%;
  min-height: calc(100% - 165px);
  @include min-width(tablet) {
    min-height: 284px;
  }
  .favourite-edit-list {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    .favourite-edit-list-item:not(:first-child) {
      margin-top: 9px;
    }
    .favourite-edit-list-item {
      display: flex;
      flex-direction: row;
      align-items: center;
      margin: 0;
      padding: 0;
      width: 100%;
      min-height: 50px;
      border-radius: 5px;
      border: solid 1px #d9d9d9;
      list-style: none;
      box-sizing: border-box;

      .favourite-edit-list-item-left {
        display: flex;
        min-width: 69px;
        height: 100%;
        align-items: center;
        .favourite-edit-list-item-drag {
          display: flex;
          align-items: center;
          justify-content: center;
          min-width: 37px;
          height: 100%;
          cursor: move;
          .favourite-edit-list-item-ellipsis {
            height: 20px;
            svg {
              fill: #ccc;
              height: 20px;
              transform: rotate(90deg);
            }
          }
        }
        .favourite-edit-list-item-icon {
          display: flex;
          justify-content: center;
          align-items: center;
          height: 100%;
          min-width: 24px;
          svg {
            position: relative;
            left: -3px;
            top: -1px;
            fill: $primary-color;
            width: 22px;
            height: 22px;
          }
          &.place {
            svg {
              fill: $primary-color;
              width: 24px;
              height: 24px;
            }
          }
          &.home, &.school, &.sport, &.shopping {
            svg {
              fill: $primary-color;
              width: 18px;
              height: 18px;
            }
          }
          &.work {
            svg {
              fill: $primary-color;
              width: 20px;
              height: 20px;
            }
          }
        }
      }
      .favourite-edit-list-item-content {
        display: flex;
        flex-direction: column;
        width: calc(100% - 69px - 86px);
        .favourite-edit-list-item-name {
          margin: 0;
          font-weight: 500;
          color: #333333;
          font-size: 15px;
          line-height: 1;
          letter-spacing: -0.6px;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }
        .favourite-edit-list-item-address {
          margin: 3px 0 0;
          color: #666666;
          font-size: 12px;
          font-weight: 400;
          line-height: 1;
          letter-spacing: -0.48px;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
          &:empty {
            margin-top: 0;
          }
        }
      }
      .favourite-edit-list-item-right {
        display: flex;
        min-width: 86px;
        align-items: center;
        justify-content: space-evenly;
        .favourite-edit-list-item-edit {
          display: flex;
          justify-content: center;
          align-items: center;
          width: 22px;
          height: 48px;
          cursor: pointer;
          svg {
            fill: #888;
            width: 22px;
            height: 22px;
          }
        }
        .favourite-edit-list-item-remove {
          display: flex;
          justify-content: center;
          align-items: center;
          cursor: pointer;
          width: 18px;
          height: 48px;
          svg {
            fill: #888;
            width: 18px;
            height: 20px;
          }
        }
      }
    }
  }
  // Container spinner
  & > div {
    width: 100%;
  }
}

